<resources>
    <string name="app_name">PasteleriaPanquecitoTD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="shape">Shape</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="delivery">Delivery</string>
    <string name="description">Description</string>
</resources>