<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.views.DetailFragment">

    <ImageView
        android:id="@+id/img_cakeDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_emailSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="right"
        android:backgroundTint="@color/accent"
        app:tint="@color/white"
        android:src="@drawable/ic_email"/>

    <TextView
        android:id="@+id/tv_cakeTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="25sp"
        android:hint="@string/title"
        android:textStyle="bold"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/tv_cakeShapeDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/shape"
        android:textStyle="normal"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/tv_cakeSizeDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/size"
        android:textStyle="normal"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/tv_cakePriceDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="normal"
        android:hint="@string/price"
        android:textColor="@color/secondary_text" />

    <CheckBox
        android:id="@+id/chk_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/delivery"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/tv_cakeDescriptionDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:hint="@string/description"
        android:textColor="@color/secondary_text" />

</LinearLayout>