<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_cake"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cakeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/tv_cakeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_cakePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/secondary_text" />

    </LinearLayout>

</LinearLayout>